# axuy

./: .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
axuy/: __init__.py  __main__.py  control.py  display.py  main.py  map.npy  misc.py  peer.py  pico.py  settings.ini  space.frag  space.vert  view.py
axuy/shaders/: comb.frag  gauss.frag  gaussh.vert  gaussv.vert  line.geom  map.frag  map.vert  pico.frag  pico.geom  pico.vert  sat.frag  tex.vert  triangle.geom  world.frag
tools/: aisample  mapgen
